name:                te
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Jeff Taggart
maintainer:          jeff@jetaggart.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable te
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       
      base >=4.7 && <4.8
    , shelly ==1.6.*
    , process ==1.2.0.0
