name:                te
version:             0.2.1
license:             GPL-3
license-file:        LICENSE
author:              Jeff Taggart
maintainer:          jeff@jetaggart.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable te
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010

  extensions: NoImplicitPrelude
              OverloadedStrings

  build-depends:                base >=4.7 && <4.8
                              , shelly ==1.6.*
                              , split
                              , text ==1.2.0.4
                              , safe ==0.3.8
                              , process ==1.2.0.0
                              , directory ==1.2.1.0